TestProject/src/objects/Teacher__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mob_no__c</fullName>
        <label>Mob no</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TName__c</fullName>
        <label>TName</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Teacher</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TC-{0000}</displayFormat>
        <label>Teacher Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Teachers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>